--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "example-project",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "start": "node src/server/index.js",
-    "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^26.4.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^1.4.5",
-    "webpack-dev-server": "^3.11.0",
-    "workbox-webpack-plugin": "^5.1.4"
-  }
+	"name": "example-project",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"start": "node src/server/index.js",
+		"build-prod": "webpack --config webpack.prod.js",
+		"build-dev": "webpack-dev-server  --config webpack.dev.js --open"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"axios": "^0.21.1",
+		"body-parser": "^1.19.0",
+		"D": "^1.0.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"webpack": "^4.46.0",
+		"webpack-cli": "^3.3.12"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.13.10",
+		"@babel/preset-env": "^7.13.10",
+		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^4.3.0",
+		"html-webpack-plugin": "^3.2.0",
+		"jest": "^26.4.2",
+		"mini-css-extract-plugin": "^0.9.0",
+		"node-sass": "^4.14.1",
+		"nodemon": "^2.0.4",
+		"optimize-css-assets-webpack-plugin": "^5.0.4",
+		"postcss": "^7.0.34",
+		"postcss-loader": "^5.2.0",
+		"sass-loader": "^10.1.1",
+		"style-loader": "^1.3.0",
+		"terser-webpack-plugin": "^1.4.5",
+		"webpack-dev-server": "^3.11.2",
+		"workbox-webpack-plugin": "^5.1.4"
+	}
 }
