--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"postcss": "^7.0.34",
 		"postcss-loader": "^5.2.0",
+		"sass": "^1.32.8",
 		"sass-loader": "^10.1.1",
 		"style-loader": "^1.3.0",
 		"terser-webpack-plugin": "^1.4.5",
